# SEUgearbox

./: .gitignore  BP测试.py  HHO.ipynb  README.md  hho.py  pyproject.toml  requirements.txt  数据处理部分，完整版.ipynb
scripts/: generate_gaf_dataset.py  prepare_research_data.py  run_experiment.py
seugearbox/: __init__.py  constants.py  experiment.py  features.py  preprocessing.py
tests/: test_features.py  test_hho.py  test_preprocessing.py
